--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -6,7 +6,19 @@ label .fa { font-size: 1.5em; }
 	width: 250px; height: 250px; display: none;
 	img { width: 100%; height: 100%; }
 }
-body { background-color: $bgc; color: #fff; }
+body {
+	background-color: $bgc; color: #fff;
+	.panel {
+		border-radius: 0;
+	}
+	.sidebar {
+		ul {
+			padding: 0;
+			margin-bottom: 2em;
+			list-style-type: none;
+		}
+	}
+}
 
 .navbar-default {
 	background-color: $nav-color;
@@ -80,6 +92,7 @@ form {
 	}
 }
 
+.users, .teams { display: flex; display: -webkit-flex; display: -ms-flexbox; }
 .user, .team {
 	padding: .5em;
 	&:hover {
