--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -71,7 +71,7 @@ h1,h2,h3,h4,h5,h6 { font-family: 'Oswald', sans-serif; }
 
 form {
 	&#post-form {
-		textarea { resize: none; width: 100%; } 
+		textarea { resize: none; width: 100%; color: #999; } 
 	}
 	.form-control {
 		border-radius: 0; background-color: #3a3b3e; border-color: #3a3b3e;
@@ -121,10 +121,22 @@ form {
 
 #logo:hover svg path { fill: #dedada; transition: fill .2s; }
 
-.btn-primary {
-	background-color: #cc4020; border-color: #cc4020;
-	&:focus, &:active, &:hover, &:active:hover { background-color: #bc3010; box-shadow: none; border-color: #bc3010; outline-color: transparent; }
+#feed {
+	margin-top: 1.5em;
+	.post {
+		background-color: #3a3b3e; margin: .25em 0; padding: .5em;
+	}
 }
+
+.btn {
+	border-radius: 0;
+	&.btn-primary {
+		background-color: #cc4020; border-color: #cc4020; margin-top: 1em;
+		&:focus, &:active, &:hover, &:active:hover { background-color: #bc3010; box-shadow: none; border-color: #bc3010; outline-color: transparent; }
+	}
+}
+
+.thumb { width: 100%; height: auto; }
 
 //-- CK EDITOR --//
 .cke_1.cke_chrome { background: #3a3b3e; border-color: #3a3b3e !important; border-radius: 0; }
