--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -116,6 +116,7 @@ form {
 	img { width: 100%; height: auto; }
 }
 
+.row.rounds { margin-bottom: 3em; }
 .users, .teams, .blocklink-wrapper { display: flex; display: -webkit-flex; display: -ms-flexbox; }
 .blocklink {
 	padding: .5em; position: relative; box-sizing: content-box;
