--- a/public/css/style.css
+++ b/public/css/style.css
@@ -354,4 +354,100 @@ i.accent {
 .cke_toolgroup:hover, .cke_combo_button:hover, .cke_button:hover {
   background-image: none !important; }
 
+.fade-carousel {
+  position: relative;
+  height: calc(100vh - 50px);
+  margin-top: -22px;
+  overflow: hidden; }
+
+.fade-carousel .carousel-inner .item {
+  height: 100vh; }
+
+.fade-carousel .carousel-indicators > li {
+  margin: 0 2px;
+  background-color: #cc4020;
+  border-color: #cc4020;
+  opacity: .7; }
+
+.fade-carousel .carousel-indicators > li.active {
+  width: 10px;
+  height: 10px;
+  opacity: 1; }
+
+.hero {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 3;
+  color: #d6d9d5;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.75);
+  -webkit-transform: translate3d(-50%, -50%, 0);
+  -moz-transform: translate3d(-50%, -50%, 0);
+  -ms-transform: translate3d(-50%, -50%, 0);
+  -o-transform: translate3d(-50%, -50%, 0);
+  transform: translate3d(-50%, -50%, 0); }
+
+.hero h1 {
+  font-size: 6em;
+  font-weight: bold;
+  margin: 0;
+  padding: 0; }
+
+.fade-carousel .carousel-inner .item .hero {
+  opacity: 0;
+  -webkit-transition: 2s all ease-in-out .1s;
+  -moz-transition: 2s all ease-in-out .1s;
+  -ms-transition: 2s all ease-in-out .1s;
+  -o-transition: 2s all ease-in-out .1s;
+  transition: 2s all ease-in-out .1s; }
+
+.fade-carousel .carousel-inner .item.active .hero {
+  opacity: 1;
+  -webkit-transition: 2s all ease-in-out .1s;
+  -moz-transition: 2s all ease-in-out .1s;
+  -ms-transition: 2s all ease-in-out .1s;
+  -o-transition: 2s all ease-in-out .1s;
+  transition: 2s all ease-in-out .1s; }
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: #080d15;
+  opacity: .7; }
+
+.btn.btn-lg {
+  padding: 10px 40px; }
+
+.btn.btn-hero, .btn.btn-hero:hover, .btn.btn-hero:focus {
+  color: #f5f5f5;
+  background-color: #cc4020;
+  border-color: #cc4020;
+  outline: none;
+  margin: 20px auto; }
+
+.fade-carousel .slides .slide-1,
+.fade-carousel .slides .slide-2,
+.fade-carousel .slides .slide-3 {
+  height: 100vh;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat; }
+.fade-carousel .slides .slide-1 {
+  background-image: url("../img/slide-1.jpg"); }
+.fade-carousel .slides .slide-2 {
+  background-image: url("../img/slide-2.jpg"); }
+.fade-carousel .slides .slide-3 {
+  background-image: url("../img/slide-3.jpg"); }
+
+@media screen and (min-width: 980px) {
+  .hero {
+    width: 980px; } }
+@media screen and (max-width: 640px) {
+  .hero h1 {
+    font-size: 4em; } }
+
 /*# sourceMappingURL=style.css.map */
